# penguins

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
assets/: CMakeLists.txt
assets/models/blend/: octogon_tile.blend  square_tile.blend
assets/shaders/: FRAGMENT_red.glsl  FRAGMENT_text.glsl  FRAGMENT_texture_light.glsl  VERTEX_color_no_model.glsl  VERTEX_color_no_proj.glsl  VERTEX_simple.glsl  VERTEX_text.glsl  VERTEX_texture_light.glsl
assets/sprites/: poisson.xcf
clients/: CMakeLists.txt  client1.c  client2.c  client2_hack.c  client3.c  client4.c
clients/client1/: CMakeLists.txt  client1.c
clients/client2/: CMakeLists.txt  client2.c  hack.c  hack.h
clients/client3/: CMakeLists.txt  client3.c  tools.h
clients/client4/: CMakeLists.txt  client4.c
cmake/modules/: FindFreetype.cmake  FindGLFW3.cmake
d3v/: CMakeLists.txt  camera.c  context_creation.c  d3v.c  gl3  light.c  model.c  mouse_projection.c  object.c  scene.c  shader.c  texture.c
d3v/include/: penguins_opengl.h
d3v/include/d3v/: camera.h  d3v.h  d3v_internal.h  light.h  model.h  mouse_projection.h  object.h  scene.h  shader.h  texture.h  user_callback.h
d3v/test/: Makefile  demod3v  main.c
display/: CMakeLists.txt  animator.c  camera.c  display.c  display.h  dpenguin.c  dpenguin.h  dtile.c  dtile.h  light.c  light.h  model.c  model.h  models  mouse_click.c  mouse_projection.c  object.c  object.h  record.c  texture.c  textures
display/include/display/: animator.h  dpenguin.h  dsp.h  dtile.h  mouseclick.h
display/models/blend/: acute_tile.blend  hexa_tile.blend  obtuse_tile.blend  penguin.blend  triangle_tile.blend
documentation/: Doxyfile  README.txt
game/: CMakeLists.txt  client.c  coord.c  debug.sh  display.c  display_animator.c  display_history.c  display_mouseclick.c  launch.bat  launch.sh  main.c  map.c  move.c  option.c  player.c  server.c  tile.c
game/include/display/: animator.h  display.h  display_internal.h  mouseclick.h  record.h
game/include/server/: client.h  map.h  move_impl.h  option.h  option_parser.h  player.h  server.h
game/test/: CMakeLists.txt  test_init_server.c  test_move.c
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: client.h  client_interface.h  d3v.h  display.h  game_interface.h  map_interface.h  move.h  server.h  tile.h
include/d3v/: camera.h  d3v_internal.h  light.h  model.h  mouse_projection.h  object.h  scene.h  texture.h  user_callback.h
include/display/: animator.h  camera.h  display.h  dsp.h  dtile.h  model.h  mouseclick.h  record.h  texture.h
include/interface/: client.h  info.txt
include/penguins/: client_interface.h  game_interface.h  map_interface.h
include/server/: client.h  coord.h  info.txt  map.h  move.h  option.h  path.h  player.h  server.h  tile.h
include/utils/: fibonacci.h  graph.h  heap.h  list.h  list_node.h  log.h  math.h  so.h  sorted_list.h  symbol_visibility.h  utils.h  vec.h
map/: CMakeLists.txt  map_hexagon.c  map_octogon.c  map_penrose.c  map_square.c  map_triangle.c
map/coords/: CMakeLists.txt  coord.c  coord.h  test_coord.c
map/penrose/: CMakeLists.txt  penrose.c  penrose.h
scripts/: FindFreeGLUT.cmake
server/: CMakeLists.txt  client.c  coord.c  launch.sh  main.c  map.c  move.c  option.c  option.h  path.c  player.c  server.c  tile.c
server/include/server/: client.h  coord.h  map.h  move_impl.h  path.h  server.h  tile.h  version.h
server/test/: CMakeLists.txt  test_coord.c  test_init_server.c  test_move.c  test_tile.c
utils/: CMakeLists.txt  graph.c  list.c  list_node.c  math.c  sorted_list.c  util.c
utils/general/: CMakeLists.txt  util.c
utils/graph/: CMakeLists.txt  graph.c
utils/graph/test/: CMakeLists.txt  test_graph.c
utils/heap/: CMakeLists.txt  heap.c
utils/heap/example/: CMakeLists.txt  main.c
utils/heap/test/: CMakeLists.txt  test_heap.c
utils/include/utils/: fibonacci.h  graph.h  heap.h  list.h  list_node.h  log.h  math.h  module_loading.h  sorted_list.h  symbol_visibility.h  threading.h  utils.h  vec.h
utils/list/: CMakeLists.txt  list.c
utils/list/test/: CMakeLists.txt
utils/list_node/: CMakeLists.txt
utils/list_node/test/: CMakeLists.txt
utils/log/: CMakeLists.txt  log.c
utils/math/: CMakeLists.txt  fibonacci.c  math.c
utils/math/test/: CMakeLists.txt  test_fibonacci.c  test_math.c
utils/samples/: sample_list.c  sample_sorted_list.c
utils/sorted_list/: CMakeLists.txt
utils/sorted_list/test/: CMakeLists.txt  test_slist.c
utils/tests/: test_graph.c  test_list_node.c
